Bug 135505. Don't bother trying to canonify `rdf:' URIs so that we avoid useless (and expensive) protocol handler lookups. r=rjc, sr=alecf, a=rjesup.